# mega.py3

./: .gitignore  HISTORY.md  README.md  pyproject.toml
src/mega/: mega.py
