[tool.poetry]
name = "mega4py"
version = "1.10.1"
description = "Python lib for the Mega.co.nz API - Updated for Python 3."
authors = ["O'Dwyer Software <hello@odwyer.software>"]
maintainers = ["Anonymous-BCFED <nope@no.pe>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Anonymous-BCFED/mega.py3"
classifiers = [
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Internet :: WWW/HTTP',
]
packages = [{ include = "mega", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.32.5"
pycryptodome = "^3.23.0"
tenacity = "^9.1.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
isort = "^7.0.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
requests-mock = "^1.12.1"
coverage = { version = "^7.11.0", extras = ["toml"] }
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
addopts = "-x -s -v"
norecursedirs = [".git"]

# zest.releaser died and doesn't support pyproject. RIP.
# [zest.releaser]
# create-wheel = yes

# I don't like Flake8 and it doesn't support pyproject.
# [tool.flake8]
# exclude = [".git", "__pycache__", "legacy", "build", "dist", ".tox"]
# max-complexity = 15
# ignore = ["E741", "W504", "W503"]

[tool.mypy]
exclude = [".venv", ".git"]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

# I prefer autopep8
# [tool:brunette]
# line-length = 79
# verbose = true
# single-quotes = true

[tool.autopep8]
max_line_length = 79    #200 :(
ignore = ["E501", "W6"]
[tool.isort]
line_length = 79 # 200 :(

[tool.coverage.run]
omit = [
    "tests/*",
    "src/*",
    "setup.py",
    ".tox/*",
    "dist/*",
    "**/celeryconfig.py",
    "**/constants.py",
    "**/migrations/*",
    "**/__init__.py",
    "app.py",
    "**/env.py",
    "**/urls.py",
]
