[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mega4py"
description = "Python lib for the Mega.co.nz API - Updated for Python 3."
readme = "README.md"
license = "Apache-2.0"
maintainers = [
    {name = "Anonymous-BCFED", email = "nope@no.pe"},
]
requires-python = ">=3.12,<4.0"
dynamic = ["version", "classifiers"]
dependencies = [
    "requests<3.0.0,>=2.32.5",
    "pycryptodome<4.0.0,>=3.23.0",
    "tenacity<10.0.0,>=9.1.2",
]

[project.urls]
homepage = "https://github.com/Anonymous-BCFED/mega.py3"


[tool.autopep8]
max_line_length = 79
ignore = ["E501", "W6"]

[tool.coverage.run]
omit = ["tests/*", "src/*", "setup.py", ".tox/*", "dist/*", "**/celeryconfig.py", "**/constants.py", "**/migrations/*", "**/__init__.py", "app.py", "**/env.py", "**/urls.py"]

[tool.isort]
line_length = 79

[tool.mypy]
exclude = [".venv", ".git"]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.poetry]
version = "1.10.1"
classifiers = ["Intended Audience :: Developers", "Operating System :: OS Independent", "Programming Language :: Python", "Programming Language :: Python :: 3", "Topic :: Internet :: WWW/HTTP"]
requires-poetry = ">=2.0,<3.0"

[[tool.poetry.packages]]
include = "mega"
from = "src"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
isort = "^7.0.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
requests-mock = "^1.12.1"
mypy = "^1.19.0"
types-requests = "^2.32.4.20250913"

[tool.poetry.group.dev.dependencies.coverage]
version = "^7.12.0"
extras = ["toml"]

[tool.pytest.ini_options]
addopts = "-x -s -v"
norecursedirs = [".git"]
